# Web-agent-craw-blog

./: .env.example  .env.production.example  .gitattributes  .gitignore  README.md  delete.ps1  delete.sh  docker-compose.production.yml  run.ps1  run.sh  setup.ps1  setup.sh  stop.ps1  stop.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260514_01_init_session_postgres.py  20260522_01_init_auth_rbac_admin.py
backend/config/: audit_logs.jsonl  chat_sessions.json  llm_runtime.json
backend/scripts/: benchmark_ab.py  benchmark_report.py  migrate_chat_sessions_to_postgres.py
backend/src/: main.py
backend/src/config/: settings.py
backend/src/controllers/: admin_controller.py  article_import_controller.py  auth_controller.py  chat_controller.py  llm_controller.py  search_controller.py
backend/src/db/: __init__.py  models.py
backend/src/models/: article_schemas.py  auth_schemas.py  schemas.py
backend/src/routes/: api.py
backend/src/services/: article_asset_service.py  article_extractor_service.py  article_fetcher_service.py  article_llm_provider.py  article_prompt_service.py  article_translation_service.py  audit_log_store.py  auth_service.py  auth_service_factory.py  chat_session_store.py  chat_session_store_factory.py  context_query_rewriter_service.py  evidence_merge_service.py  key_store.py  llm_runtime_store.py  (+14 more)
backend/tests/: test_api.py  test_article_import_contract.py  test_auth_api.py  test_auth_migration_contract.py  test_postgres_auth_service.py
(+42 files in other folders)
